test/conformance/chainsaw/generating-policies/data/sync/sync-modify-policy-and-downstream-another-kind/configmap-error.yaml
apiVersion: v1
data:
  KAFKA_ADDRESS: 192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092
  ZK_ADDRESS: 192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181
kind: ConfigMap
metadata:
  name: sync-modify-policy-and-downstream-kind
  namespace: sync-modify-policy-and-downstream-kind
