test/conformance/chainsaw/generating-policies/data/sync/sync-modify-policy-and-downstream-another-kind/networkpolicy-assert.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sync-modify-policy-and-downstream-kind
  namespace: sync-modify-policy-and-downstream-kind
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
