test/conformance/chainsaw/generating-policies/data/sync/sync-modify-policy-and-downstream-another-kind/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: sync-modify-policy-and-downstream-kind
spec:
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: sync-modify-policy-and-downstream-kind
  - name: create namespace
    try:
    - apply:
        file: namespace.yaml
  - name: check that configmap is generated
    try:
    - assert:
        file: configmap-assert.yaml
        timeout: 60s
  - name: modify the policy
    try:
    - apply:
        file: policy-modified.yaml
  - name: check that the old downstream type is deleted
    try:
    - error:
        file: configmap-error.yaml
  - name: check that the new downstream type is generated
    try:
    - assert:
        file: networkpolicy-assert.yaml
        timeout: 60s
